test/corpus/statements.txt
=================|||
Basic frontmatter
=================|||
---
foo: "bar";
---
# Lorem ipsum dolor sit amet
---|||

(source_file
  (frontmatter (text))
  (remainder)
)

==========================================|||
Frontmatter with `---` inside its contents
==========================================|||
---
foo: "bar";
  baz: '---';
---x
---
# Lorem ipsum dolor sit amet

---

Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

---|||

(source_file
  (frontmatter (text))
  (remainder)
)


=========================================|||
Frontmatter with extra `---` in remainder
=========================================|||
---
foo: "bar";
---
# Lorem ipsum dolor sit amet

---

Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

---|||

(source_file
  (frontmatter (text))
  (remainder)
)


=============================================|||
Malformed frontmatter that does not terminate
=============================================|||
---
foo: "bar";
---.
---|||

(source_file
  (frontmatter (text))
  (MISSING remainder)
)
